# cranefuck

./: Cargo.toml  LICENSE  README.md
benches/: mandlebrot.rs
examples/: put-one-at-cell.bf
src/: cfg.rs  interpreter.rs  jit.rs  lib.rs  main.rs  optimizer.rs  parser.rs  peephole.rs  ssa.rs  tree.rs
src/jit/: io.rs  mod.rs
