[package]
name = "cranefuck"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
atty = "0.2.14"
clap = { version = "4.5.30", features = ["derive"] }
cranelift = "0.117.1"
cranelift-jit = "0.117.1"
cranelift-module = "0.117.1"
cranelift-native = "0.117.1"
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "mandlebrot"
harness = false
